feat(java): implement protocol v2 data plane